# MiniClaw

./: .env.example  .gitignore  CLAUDE.md  MyDome.py  README.md  config.example.json  identity.md  pyproject.toml
miniclaw/: config.json  main.py
miniclaw/agent/tools/: __init__.py
skills/code_review/: SKILL.md
skills/translator/: SKILL.md
skills/weather/: SKILL.md
src/miniclaw/: __init__.py  agent.py  config.py  main.py
src/miniclaw/agent/: __init__.py  context.py  loop.py  memory.py  skills.py
src/miniclaw/agent/tools/: base.py  filesystem.py  registry.py  shell.py  web_fetch.py  web_search.py
src/miniclaw/providers/: __init__.py  base.py  openai_compat.py
src/miniclaw/session/: manager.py
