[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.44.0",
]

[project.scripts]
miniclaw = "miniclaw.main:main"
