[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "openai>=2.44.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
miniclaw = "miniclaw.main:main"
